@@ -1,4 +1,7 @@
 2011-09-21 gabriel.oliveira
+* Improve 'select language' list layout
+
+2011-09-21 gabriel.oliveira
 * Fix line color when hovering mouse
 
 2011-09-21 gabriel.oliveira
